package pt.isel.mpd.values;

public enum BeverageSize {Small, Medium, Large }


