@startuml
'https://plantuml.com/class-diagram

interface Beverage {
    String id();
    double basePrice();
    NutritionalInfo nutInfo();
    String description();
    String descriptionDetail();
    BeverageSize size();
}

enum BeverageSize {
    Small,
    Medium,
    Large
}

record NutritionalInfo {
  int calories;
  int sugar;
}

BeverageSize <-- Beverage
NutritionalInfo <-- Beverage
@enduml